# ferrum

./: .editorconfig  .gitignore  .prettierignore  Cargo.toml  IMPLEMENTATION_STATUS.md  README.md  UI_GUIDE.md  biome.json  clippy.toml  eslint.config.js  package.json  playwright.config.ts  rust-toolchain.toml  rustfmt.toml  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.claude/: ralph-loop.local.md
.github/workflows/: ci.yml
crates/ferrum_buffer/: Cargo.toml
crates/ferrum_buffer/benches/: buffer_ops.rs
crates/ferrum_buffer/queries/css/: highlights.scm
crates/ferrum_buffer/queries/go/: highlights.scm
crates/ferrum_buffer/queries/html/: highlights.scm
crates/ferrum_buffer/queries/javascript/: highlights.scm
crates/ferrum_buffer/queries/json/: highlights.scm
crates/ferrum_buffer/queries/markdown/: highlights.scm
crates/ferrum_buffer/queries/python/: highlights.scm
crates/ferrum_buffer/queries/rust/: highlights.scm
crates/ferrum_buffer/queries/toml/: highlights.scm
crates/ferrum_buffer/queries/typescript/: highlights.scm
crates/ferrum_buffer/src/: anchor.rs  buffer.rs  depth.rs  edit.rs  history.rs  lib.rs  position.rs  selection.rs  syntax.rs
crates/ferrum_collab/: Cargo.toml
crates/ferrum_collab/src/: crdt.rs  lib.rs  peer.rs  session.rs
crates/ferrum_core/: Cargo.toml
crates/ferrum_core/src/: error.rs  event.rs  id.rs  lib.rs  result.rs  task.rs  telemetry.rs
crates/ferrum_editor/: Cargo.toml
crates/ferrum_editor/src/: depth.rs  display_map.rs  editor.rs  fold.rs  lib.rs  tabs.rs  workspace.rs
crates/ferrum_fs/: Cargo.toml
crates/ferrum_fs/src/: file_info.rs  lib.rs  walker.rs  watcher.rs
crates/ferrum_git/: Cargo.toml
crates/ferrum_git/src/: lib.rs  repository.rs  status.rs
crates/ferrum_ipc/: Cargo.toml
crates/ferrum_ipc/src/: commands.rs  lib.rs  protocol.rs  response.rs
crates/ferrum_lsp/: Cargo.toml
crates/ferrum_lsp/src/: client.rs  lib.rs  manager.rs  types.rs
crates/ferrum_plugin/: Cargo.toml
crates/ferrum_plugin/src/: api.rs  lib.rs  manifest.rs  permission.rs  registry.rs  runtime.rs
crates/ferrum_search/: Cargo.toml
crates/ferrum_search/src/: file_search.rs  lib.rs  text_search.rs
crates/ferrum_settings/: Cargo.toml
crates/ferrum_settings/src/: lib.rs  schema.rs  settings.rs
crates/ferrum_terminal/: Cargo.toml
crates/ferrum_terminal/src/: lib.rs  pty.rs  session.rs
crates/ferrum_ui/: Cargo.toml
crates/ferrum_ui/src/: layout.rs  lib.rs  theme.rs
docs/: CONTRIB.md  EDITOR_ARCHITECTURE.md  README.md  RUNBOOK.md  STATUS.md
docs/architecture/: architecture.md  lsp-integration.md  state-management.md
docs/design/: README.md
docs/research/: zed-analysis.md
docs/review/: document-review.md
docs/specs/: README.md  additional-features.md  context-action-palette.md  tree-viewer.md  visual-coding.md
docs/technical/: accessibility.md  plugin-system.md  testing-strategy.md
e2e/: components.spec.ts  editor.spec.ts  workflow.spec.ts
plans/: README.md  overview.md
plans/architecture/: editor-engine.md  file-explorer.md  ipc-protocol.md  lsp-integration.md  search-system.md  state-management.md  view-mode-system.md
plans/design/: README.md
plans/review/: philosophy-review.md
plans/scenarios/: ide-scenarios.md
plans/specs/: README.md  additional-features.md  comment-system.md  context-action-palette.md  design-language.md  navigation.md  progressive-disclosure.md  tree-viewer.md  visual-coding.md
plans/technical/: README.md  frontend-optimization.md  internationalization.md  plugin-system.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: buffer.rs  env.rs  file.rs  git.rs  lsp.rs  mod.rs  project.rs  search.rs  settings.rs  syntax.rs  terminal.rs  view.rs
src/__tests__/components/: Autocomplete.test.tsx  ContextActionPalette.test.tsx  Editor.test.tsx  HoverTooltip.test.tsx  NavigationTrail.test.tsx  TreeViewer.test.tsx  ViewModeToggle.test.tsx
src/__tests__/ipc/: tauri-check.test.ts
src/__tests__/stores/: editor.test.ts  ui.test.ts
src/__tests__/utils/: textMeasurer.test.ts
src/components/: index.ts
src/components/ai/: AiChatPanel.tsx  AiContextActions.tsx  AiProvider.tsx  CombinedAiProvider.tsx  LocalAiPanel.tsx  LocalAiProvider.tsx  UnifiedAiPanel.tsx  index.ts
src/components/editor/: Autocomplete.tsx  BlockRegionHighlight.tsx  Componentify.tsx  ContextActionPalette.tsx  DependencyHighlight.tsx  Editor.tsx  EditorTabs.tsx  EditorWithFeatures.tsx  ErrorFlowVisualization.tsx  FindReferencesPanel.tsx  HoverTooltip.tsx  InlineBlame.tsx  NavigationTrail.tsx  PeekView.tsx  RenameSymbolDialog.tsx  StructuralMinimap.tsx  ViewModeToggle.tsx  types.ts
src/components/explorer/: FileExplorer.tsx
src/components/git/: GitPanel.tsx
src/components/layout/: ActivityBar.tsx  EditorArea.tsx  Panel.tsx  Sidebar.tsx  StatusBar.tsx  index.ts
src/components/panels/: EnvManagerPanel.tsx  ProblemsPanel.tsx
src/components/preview/: CompilePreview.tsx
src/components/search/: SearchPanel.tsx
src/components/settings/: SettingsPanel.tsx
src/components/terminal/: Terminal.tsx  TerminalPanel.tsx  index.ts
src/components/tree-viewer/: StickyHeader.tsx  TreeViewer.tsx  index.ts
src/components/ui/: CommandPalette.tsx
src/components/visual/: VisualCodeView.tsx
src/hooks/: index.ts  useEventListener.ts  useFileWatcher.ts  useKeyboard.ts
src/ipc/: commands.ts  index.ts  tauri-check.ts  types.ts
src/stores/: commands.ts  editor.ts  files.ts  index.ts  keybindings.ts  navigationStore.ts  ui.ts
src/test/: setup.ts
src/types/: index.ts
src/utils/: clientHighlighter.ts  debounce.ts  editorHelpers.ts  result.ts  textMeasurer.ts
