[package]
name = "ferrum"
description = "Ferrum IDE - A high-performance code editor"
version.workspace = true
edition = "2021"
authors = ["eunhhu"]
license = "MIT"

[lib]
name = "ferrum_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
# Workspace crates
ferrum_core.workspace = true
ferrum_editor.workspace = true
ferrum_buffer.workspace = true
ferrum_fs.workspace = true
ferrum_lsp.workspace = true
ferrum_terminal.workspace = true
ferrum_git.workspace = true
ferrum_search.workspace = true
ferrum_ui.workspace = true
ferrum_settings.workspace = true
ferrum_ipc.workspace = true

# Terminal
dashmap.workspace = true

# Git
git2.workspace = true

# Tauri
tauri.workspace = true
tauri-plugin-opener.workspace = true
tauri-plugin-shell.workspace = true
tauri-plugin-fs.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-clipboard-manager.workspace = true
tauri-plugin-window-state.workspace = true

# Runtime
tokio.workspace = true
parking_lot.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# LSP
lsp-types.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Utilities
once_cell.workspace = true
regex = "1"

[dev-dependencies]
pretty_assertions.workspace = true
