[package]
name = "ferrum_collab"
description = "Real-time collaboration using CRDT"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ferrum_core.workspace = true

tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
parking_lot.workspace = true

serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
chrono.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
