[package]
name = "ferrum_core"
description = "Core types, traits, and utilities for Ferrum IDE"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Async
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
parking_lot.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true

# Utilities
uuid.workspace = true
chrono.workspace = true
once_cell.workspace = true
dashmap.workspace = true
smallvec.workspace = true
indexmap.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
insta.workspace = true
proptest.workspace = true
