[package]
name = "ferrum_fs"
description = "File system operations with watching and caching"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ferrum_core.workspace = true

tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
parking_lot.workspace = true

notify.workspace = true
notify-debouncer-full.workspace = true
ignore.workspace = true

serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
dashmap.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile = "3"
