[package]
name = "ferrum_git"
description = "Git integration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ferrum_core.workspace = true

git2.workspace = true
tokio.workspace = true
parking_lot.workspace = true

serde.workspace = true
tracing.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile = "3"
