[package]
name = "ferrum_ipc"
description = "IPC layer for Tauri communication with MessagePack serialization"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ferrum_core.workspace = true

tauri.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
rmp-serde.workspace = true
tracing.workspace = true
parking_lot.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
