[package]
name = "ferrum_lsp"
description = "Language Server Protocol client implementation"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ferrum_core.workspace = true

tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
parking_lot.workspace = true

lsp-types.workspace = true
tower-lsp.workspace = true

serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
dashmap.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
