[package]
name = "ferrum_plugin"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ferrum_core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
parking_lot.workspace = true
tracing.workspace = true
thiserror.workspace = true
dashmap.workspace = true
uuid.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
