[package]
name = "ferrum_search"
description = "File and text search with fuzzy matching"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ferrum_core.workspace = true
ferrum_fs.workspace = true

nucleo.workspace = true
ignore.workspace = true

tokio.workspace = true
parking_lot.workspace = true

serde.workspace = true
tracing.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile = "3"
